--- a/setup.cfg
+++ b/setup.cfg
@@ -1,13 +1,17 @@
 [metadata]
 name = aiopokeapi
-description = An asynchronous API wrapper for pokeapi.
+description = An asynchronous API wrapper for the pokeapi.
 author = beastmatser
 license = MIT
 license_file = LICENSE
 platforms = unix, linux, osx, cygwin, win32
 classifiers =
+    Programming Language :: Python :: 3.6
+    Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10.0-rc.2
+version = 0.0.1
 
 [options]
 zip_safe = False
