--- a/setup.cfg
+++ b/setup.cfg
@@ -6,11 +6,14 @@ license = MIT
 license_file = LICENSE
 platforms = unix, linux, osx, cygwin, win32
 classifiers =
+    Natural Language :: English
+    Framework :: AsyncIO
+    Development Status :: 4 - Beta
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
-    Programming Language :: Python :: 3.10.0-rc.2
+    Programming Language :: Python :: 3.10
 version = 0.0.1
 
 [options]
