Add description for pypi

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,6 +2,8 @@
 name = aiopokeapi
 description = An asynchronous API wrapper for the pokeapi.
 author = beastmatser
+long_description = file: README.md
+long_description_content_type='text/markdown'
 license = MIT
 license_file = LICENSE
 platforms = unix, linux, osx, cygwin, win32
