--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = aiopokeapi
 description = An asynchronous API wrapper for the pokeapi.
 author = beastmatser
 long_description = file: README.md
-long_description_content_type='text/markdown'
+long_description_content_type=text/markdown
 license = MIT
 license_file = LICENSE
 platforms = unix, linux, osx, cygwin, win32
@@ -16,7 +16,7 @@ classifiers =
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
-version = 0.0.1
+version = 0.0.2
 
 [options]
 zip_safe = False
