--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,11 @@
 [tox]
 minversion = 3.6.8
-envlist = python3.6, python3.7, python3.8, python3.9, python310, flake8, mypy
+envlist = python3.8, python3.9, python310, flake8, mypy
 isolated_build = true
 
 [gh-actions]
 python =
     3.6: python3.6, mypy, flake8
-    3.7: python3.7
-    3.8: python3.8
     3.9: python3.9
     3.10: python3.10
 
