--- a/.editorconfig
+++ b/.editorconfig
@@ -6,5 +6,8 @@ indent_style = space
 indent_size = 4
 trim_trailing_whitespace = true
 
+[*.{yml, yaml}]
+indent_size = 2
+
 [*]
 insert_final_newline = true
