--- a/setup.cfg
+++ b/setup.cfg
@@ -11,6 +11,7 @@ classifiers =
     Natural Language :: English
     Framework :: AsyncIO
     Development Status :: 4 - Beta
+    Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
@@ -23,7 +24,7 @@ packages = find:
 install_requires =
     aiofiles==0.6.0
     aiohttp>=3.7.4
-python_requires = >=3.6
+python_requires = >=3.7
 package_dir =
     =aiopoke
 
