--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,14 @@
 [tox]
-minversion = 3.6.8
+minversion = 3.7.0
 envlist = python3.8, python3.9, python310, flake8, mypy
 isolated_build = true
 
 [gh-actions]
 python =
-    3.6: python3.6, mypy, flake8
-    3.9: python3.9
-    3.10: python3.10
+    3.7: python3.7, mypy, flake8
+    3.8: python3.8, mypy, flake8
+    3.9: python3.9, mypy, flake8
+    3.10: python3.10, mypy, flake8
 
 [testenv]
 setenv =
@@ -18,12 +19,12 @@ commands =
     pytest --basetemp={envtmpdir}
 
 [testenv:flake8]
-basepython = python3.6
+basepython = ${{PYTHON}}
 deps = flake8
 commands = flake8 aiopoke tests
 
 [testenv:mypy]
-basepython = python3.6
+basepython = ${{PYTHON}}
 deps =
     -r{toxinidir}/requirements_dev.txt
     types-aiofiles==0.1.9
