:white_check_mark: Fix tests

--- a/tox.ini
+++ b/tox.ini
@@ -19,7 +19,7 @@ commands =
     pytest --basetemp={envtmpdir}
 
 [testenv:flake8]
-basepython = ${{PYTHON}}
+basepython = ${{PYTHONPATH}}
 deps = flake8
 commands = flake8 aiopoke tests
 
