--- a/tox.ini
+++ b/tox.ini
@@ -5,10 +5,10 @@ isolated_build = true
 
 [gh-actions]
 python =
-    3.7: python3.7, mypy, flake8
-    3.8: python3.8, mypy, flake8
-    3.9: python3.9, mypy, flake8
-    3.10: python3.10, mypy, flake8
+    3.7: python3.7, flake8, mypy
+    3.8: python3.8
+    3.9: python3.9
+    3.10: python3.10
 
 [testenv]
 setenv =
@@ -19,12 +19,12 @@ commands =
     pytest --basetemp={envtmpdir}
 
 [testenv:flake8]
-basepython = ${{PYTHONPATH}}
+basepython = python3.7
 deps = flake8
 commands = flake8 aiopoke tests
 
 [testenv:mypy]
-basepython = ${{PYTHON}}
+basepython = python3.7
 deps =
     -r{toxinidir}/requirements_dev.txt
     types-aiofiles==0.1.9
