:wrench: Update tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 minversion = 3.7.0
-envlist = python3.8, python3.9, python310, flake8, mypy
+envlist = python3.7, python3.8, python3.9, python310, flake8, mypy
 isolated_build = true
 
 [gh-actions]
@@ -34,3 +34,4 @@ commands = mypy aiopoke
 [flake8]
 ignore =
     F401
+    W503
