--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,6 +20,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
+        curl https://bootstrap.pypa.io/get-pip.py | python
         python -m pip install --upgrade pip
         pip install tox tox-gh-actions
     - name: Test with tox
