:wrench: Update config

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -45,4 +45,4 @@ repos:
     rev: v0.3.0
     hooks:
       - id: absolufy-imports
-        args: [--application-directories aiopoke]
+        args: [--application-directories=aiopoke]
