--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,6 +13,7 @@ repos:
       - id: check-yaml
       - id: check-added-large-files
       - id: debug-statements
+      - id: check-toml
         language_version: python3
 
   - repo: https://github.com/PyCQA/flake8
@@ -45,4 +46,4 @@ repos:
     rev: v0.3.0
     hooks:
       - id: absolufy-imports
-        args: [--application-directories=aiopoke]
+        files: ^aiopoke/
