--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,13 +27,14 @@ repos:
     rev: v2.6.0
     hooks:
       - id: reorder-python-imports
-        args: [--application-directories=aiopoke, --py36-plus]
+        args: [--py37-plus]
+        files: ^aiopoke/
 
   - repo: https://github.com/asottile/pyupgrade
     rev: v2.29.0
     hooks:
       - id: pyupgrade
-        args: [--py36-plus]
+        args: [--py37-plus]
 
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v0.910
