--- a/setup.cfg
+++ b/setup.cfg
@@ -10,12 +10,16 @@ platforms = unix, linux, osx, cygwin, win32
 classifiers =
     Natural Language :: English
     Framework :: AsyncIO
-    Development Status :: 4 - Beta
+    Intended Audience :: Developers
+    License :: OSI Approved :: MIT License
+    Development Status :: 5 - Production/Stable
+    Typing :: Typed
+    Programming Language :: Python :: 3 :: Only
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
-version = 0.1.1
+version = 0.1.2
 
 [options]
 zip_safe = False
