--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 name = aiopokeapi
 description = An asynchronous API wrapper for the pokeapi.
 author = beastmatser
-long_description = file: README.md
+long_description = file: assets/PYPI.md
 long_description_content_type=text/markdown
 license = MIT
 license_file = LICENSE
@@ -15,7 +15,7 @@ classifiers =
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
-version = 0.1.1
+version = 0.1.2
 
 [options]
 zip_safe = False
