:triangular_flag_on_post: Add more classifiers

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,13 +8,22 @@ license = MIT
 license_file = LICENSE
 platforms = unix, linux, osx, cygwin, win32
 classifiers =
-    Natural Language :: English
+    Development Status :: 5 - Production/Stable
     Framework :: AsyncIO
-    Development Status :: 4 - Beta
+    Intended Audience :: Developers
+    License :: OSI Approved :: MIT License
+    Natural Language :: English
+    Operating System :: OS Independent
+    Programming Language :: Python :: 3 :: Only
+    Programming Language :: Python :: 3.10
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
-    Programming Language :: Python :: 3.10
+    Topic :: Internet
+    Topic :: Software Development :: Libraries
+    Topic :: Software Development :: Libraries :: Python Modules
+    Topic :: Utilities
+    Typing :: Typed
 version = 0.1.2.1
 
 [options]
