--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,6 @@ author = beastmatser
 long_description = file: assets/PYPI.md
 long_description_content_type=text/markdown
 license = MIT
-license_file = LICENSE
 platforms = unix, linux, osx, cygwin, win32
 classifiers =
     Development Status :: 5 - Production/Stable
@@ -35,10 +34,10 @@ install_requires =
     aiohttp>=3.7.4
 python_requires = >=3.7
 package_dir =
-    =aiopoke
+    =src
 
 [options.packages.find]
-where = aiopoke
+where = src
 
 [options.extras_require]
 testing =
