--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,14 +21,14 @@ repos:
     hooks:
       - id: flake8
         language_version: python3
-        args: [--ignore=W503 aiopoke]
+        args: [--ignore=W503 src/aiopoke]
 
   - repo: https://github.com/asottile/reorder_python_imports
     rev: v3.0.1
     hooks:
       - id: reorder-python-imports
         args: [--py37-plus]
-        files: ^aiopoke/
+        files: ^src/aiopoke/
 
   - repo: https://github.com/asottile/pyupgrade
     rev: v2.32.0
@@ -40,11 +40,11 @@ repos:
     rev: v0.942
     hooks:
       - id: mypy
-        files: ^aiopoke/
+        files: ^src/aiopoke/
         args: [--install-types, --non-interactive]
 
   - repo: https://github.com/MarcoGorelli/absolufy-imports
     rev: v0.3.1
     hooks:
       - id: absolufy-imports
-        files: ^aiopoke/
+        files: ^src/aiopoke/
