--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,13 +4,13 @@ build-backend = "setuptools.build_meta"
 
 [tool.pytest.ini_options]
 minversion = "6.0"
-addopts = "--cov=aiopoke"
+addopts = "--cov=src/aiopoke"
 testpaths = [
     "tests"
 ]
 
 [tool.mypy]
-mypy_path = "aiopoke"
+mypy_path = "src/aiopoke"
 check_untyped_defs = true
 disallow_any_generics = true
 ignore_missing_imports = true
