--- a/tox.ini
+++ b/tox.ini
@@ -21,7 +21,7 @@ commands =
 [testenv:flake8]
 basepython = python3.7
 deps = flake8
-commands = flake8 aiopoke tests
+commands = flake8 src/aiopoke tests
 
 [testenv:mypy]
 basepython = python3.7
@@ -29,7 +29,7 @@ deps =
     -r{toxinidir}/requirements_dev.txt
     types-aiofiles==0.1.9
 ignore_import = true
-commands = mypy aiopoke
+commands = mypy src/aiopoke
 
 [flake8]
 ignore =
