--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 minversion = 3.7.0
-envlist = python3.7, python3.8, python3.9, python310, flake8, mypy
+envlist = python3.7, python3.8, python3.9, python3.10, python3.11, flake8, mypy
 isolated_build = true
 
 [gh-actions]
@@ -9,6 +9,7 @@ python =
     3.8: python3.8
     3.9: python3.9
     3.10: python3.10
+    3.11: python3.11
 
 [testenv]
 setenv =
