--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,11 @@
 [tox]
-minversion = 3.7.0
-envlist = python3.7, python3.8, python3.9, python3.10, python3.11, flake8, mypy
+minversion = 3.8.0
+envlist = python3.8, python3.9, python3.10, python3.11, flake8, mypy
 isolated_build = true
 
 [gh-actions]
 python =
-    3.7: python3.7, flake8, mypy
-    3.8: python3.8
+    3.8: python3.8, flake8, mypy
     3.9: python3.9
     3.10: python3.10
     3.11: python3.11
@@ -20,12 +19,12 @@ commands =
     pytest --basetemp={envtmpdir}
 
 [testenv:flake8]
-basepython = python3.7
+basepython = python3.8
 deps = flake8
 commands = flake8 src/aiopoke tests
 
 [testenv:mypy]
-basepython = python3.7
+basepython = python3.8
 deps =
     -r{toxinidir}/requirements_dev.txt
     types-aiofiles==0.1.9
