:hammer: :white_check_mark: Fix pytest-asyncio warnings

--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,7 @@ setenv =
 deps =
     -r{toxinidir}/requirements_dev.txt
 commands =
-    pytest --basetemp={envtmpdir}
+    pytest --basetemp={envtmpdir} --asyncio-mode=auto
 
 [testenv:flake8]
 basepython = python3.8
