--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 minversion = 3.8.0
-envlist = python3.8, python3.9, python3.10, python3.11, flake8, mypy
+envlist = python3.8, python3.9, python3.10, python3.11, python3.12, flake8, mypy
 isolated_build = true
 
 [gh-actions]
@@ -9,6 +9,7 @@ python =
     3.9: python3.9
     3.10: python3.10
     3.11: python3.11
+    3.12: python3.12
 
 [testenv]
 setenv =
