--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,11 @@
 [tox]
-minversion = 3.8.0
-envlist = python3.8, python3.9, python3.10, python3.11, python3.12, python3.13, flake8, mypy
+minversion = 3.9.0
+envlist = python3.9, python3.10, python3.11, python3.12, python3.13, flake8, mypy
 isolated_build = true
 
 [gh-actions]
 python =
-    3.8: python3.8, flake8, mypy
-    3.9: python3.9
+    3.9: python3.9, flake8, mypy
     3.10: python3.10
     3.11: python3.11
     3.12: python3.12
@@ -21,12 +20,12 @@ commands =
     pytest --basetemp={envtmpdir} --asyncio-mode=auto
 
 [testenv:flake8]
-basepython = python3.8
+basepython = python3.9
 deps = flake8
 commands = flake8 src/aiopoke tests
 
 [testenv:mypy]
-basepython = python3.8
+basepython = python3.9
 deps =
     -r{toxinidir}/requirements_dev.txt
     types-aiofiles==0.1.9
