:heavy_minus_sign: End of life python 3.9

--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,11 @@
 [tox]
-minversion = 3.9.0
-envlist = python3.9, python3.10, python3.11, python3.12, python3.13, flake8, mypy
+minversion = 3.10.0
+envlist = python3.10, python3.11, python3.12, python3.13, flake8, mypy
 isolated_build = true
 
 [gh-actions]
 python =
-    3.9: python3.9, flake8, mypy
-    3.10: python3.10
+    3.10: python3.10, flake8, mypy
     3.11: python3.11
     3.12: python3.12
     3.13: python3.13
@@ -20,12 +19,12 @@ commands =
     pytest --basetemp={envtmpdir} --asyncio-mode=auto
 
 [testenv:flake8]
-basepython = python3.9
+basepython = python3.10
 deps = flake8
 commands = flake8 src/aiopoke tests
 
 [testenv:mypy]
-basepython = python3.9
+basepython = python3.10
 deps =
     -r{toxinidir}/requirements_dev.txt
     types-aiofiles==0.1.9
