:heavy_plus_sign: Add python3.14 support

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 minversion = 3.10.0
-envlist = python3.10, python3.11, python3.12, python3.13, flake8, mypy
+envlist = python3.10, python3.11, python3.12, python3.13, python3.14, flake8, mypy
 isolated_build = true
 
 [gh-actions]
@@ -9,6 +9,7 @@ python =
     3.11: python3.11
     3.12: python3.12
     3.13: python3.13
+    3.14: python3.14
 
 [testenv]
 setenv =
