--- a/setup.cfg
+++ b/setup.cfg
@@ -14,6 +14,7 @@ classifiers =
     Natural Language :: English
     Operating System :: OS Independent
     Programming Language :: Python :: 3 :: Only
+    Programming Language :: Python :: 3.14
     Programming Language :: Python :: 3.13
     Programming Language :: Python :: 3.12
     Programming Language :: Python :: 3.11
